# python_django

./: .gitignore  requirements.txt
Auth/mysite/myauth/: urls.py  views.py
Auth/mysite/mysite/: settings.py  urls.py
CBV/mysite/shopapp/: urls.py  views.py
DatabaseAndModels/mysite/mysite/: settings.py  urls.py
DatabaseAndModels/mysite/shopapp/: models.py  urls.py  (+1 more)
Files/mysite/: shopapp_products-fixture.json
Forms/: requirements.txt
HTML_CSS/: index.html  styles.css
mysite/: .dockerignore  .env.example  Dockerfile  auth_user-fixture.json  docker-compose.yaml  pyproject.toml  requirements.txt  shopapp_order-fixture.json
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/management/commands/: create_random_articles.py  create_random_authors.py  create_random_categories.py  create_random_tags.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_content.py
mysite/blogapp/templates/blogapp/: article_list.html  main-page.html
mysite/myapiapp/: urls.py
mysite/myauth/: models.py  urls.py
mysite/myauth/migrations/: 0001_initial.py
mysite/myauth/templates/myauth/: about-me.html  base.html
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  models.py  serializers.py  sitemap.py  urls.py  views.py
mysite/shopapp/migrations/: 0009_alter_order_options_alter_product_options.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/shopapp/: groups-list.html  order_detail.html  orders_changelist.html  product_confirm_delete.html  products-details.html  user-orders.html
mysite/static/: styles.css
(+95 files in other folders)
