[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Vladimir Volosnikov <volosnikovvladimir69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-crispy-forms = "^2.3"
django-debug-toolbar = "^4.4.6"
django-filter = "^24.3"
pillow = "^11.0.0"
gunicorn = "^23.0.0"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
